-
Type:
Bug
-
Resolution: Done
-
Priority:
Minor - P4
-
Affects Version/s: 2.4.0-rc3
-
Component/s: Admin, Diagnostics
-
None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
> db.serverStatus().metrics.getLastError.wtime.num 54 > db.getLastErrorObj(1, 2);db.serverStatus().metrics.getLastError.wtime.num 55 > db.getLastErrorObj(-11, 2);db.serverStatus().metrics.getLastError.wtime.num 56 > db.getLastErrorObj(0, 2);db.serverStatus().metrics.getLastError.wtime.num 56
- is related to
-
SERVER-10775 get_last_error.js failing on multiple "duroff" builders
-
- Closed
-