SERVER-9005 - Only record wtime metrics when w>1